# ferrous

./: .gitignore  Cargo.toml  LICENSE  README.md  observations.md
examples/: books.rs  books_direct.rs
src/: crawler.rs  direct.rs  element.rs  fetcher.rs  lib.rs  output.rs  stats.rs  zyte.rs
